--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -2,23 +2,55 @@
     "cells": [
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Example usage\n",
                 "\n",
                 "To use `pycounts` in a project:"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "import pycounts\n",
                 "\n",
                 "print(pycounts.__version__)"
-            ],
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": [
+                "from pycounts.pycounts import count_words \n",
+                "from pycounts.plotting import plot_words"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "quote = \"Insanity is doing the same thing over and over and \\\n",
+                "             expecting different results.\"\n",
+                "with open(\"tests/einstein.txt\", \"w\") as file:\n",
+                "        file.write(quote)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "counts = count_words(\"einstein.txt\")\n",
+                "print(counts)"
+            ]
         }
     ],
     "metadata": {
